force-app/main/default/objects/Care_Team_Member__c/Care_Team_Member__c.object-meta.xml
<CustomObject>
    <description>Lightweight stand-in for Health Cloud care team (CareTeam / CaseTeamMember).</description>
    <label>Care Team Member</label>
    <nameField>
        <displayFormat>CTM-{00000}</displayFormat>
        <label>Care Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>