force-app/main/default/objects/Care_Team_Member__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Care Team Members</relationshipLabel>
    <relationshipName>Care_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>