force-app/main/default/objects/Care_Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Manager</fullName>
            </value>
            <value>
                <fullName>Primary Care Physician</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>