force-app/main/default/objects/Care_Team_Member__c/fields/Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name__c</fullName>
    <label>Team Member Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>